--- a/ui/index.html
+++ b/ui/index.html
@@ -11,6 +11,9 @@
         <div class="center text-big bold">
             Hi! I am Divya.This is my first Web App.!
         </div>
+        <script>
+            alert('Hi!,I am java scirpt');
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
