--- a/ui/index.html
+++ b/ui/index.html
@@ -30,7 +30,7 @@
             <br/>
             <hr/>
             <input type="text" id="name" placeholder="Name"/>
-            <input typr="submit" value="Submit"></input>
+            <input type="submit" value="Submit"></input>
             <ul>
                 <li>name1</li>
                            <li>name2</li>
